@@ -1,6 +1,8 @@
 2003-06-01	ujwal
 
     * Updated Korean translation from TaeYoung Oh.
+    
+    * Hiding cursor during typing.
 
 2003-05-31	ujwal
     
